# wpl-check

./: .gitignore  Cargo.toml  README.md  README.zh.md  install-skill.sh
.github/workflows/: ci.yml  release.yml
_gal/: adm.gxl  work.gxl
examples/wpl-check/: README.md
examples/wpl-check/core/log_line/: rule.wpl
examples/wpl-check/core/nginx_access_brace_time/: rule.wpl  sample.txt
examples/wpl-check/core/nginx_access_clf/: rule.wpl  sample.txt
examples/wpl-check/core/package_demo/: rule.wpl
examples/wpl-check/log_line/: sample.txt
scripts/: install-codex-skill.sh  sync-wp-rule-examples.sh
src/: app.rs  cli.rs  main.rs  model.rs
tools/skills/wpl-rule-check/: SKILL.md  skill.json
tools/skills/wpl-rule-check/agents/: anthropic.yaml  cline.yaml  continue.yaml  cursor.yaml  gemini.yaml  generic.yaml  openai.yaml
tools/skills/wpl-rule-check/examples/csv_demo/: rule.wpl  sample.txt
tools/skills/wpl-rule-check/examples/kvarr_array_time/: rule.wpl  sample.txt
tools/skills/wpl-rule-check/references/: cross-model-usage.md  how-to-write-wpl.md  portable-system-prompt.md  wp-rule-repo.md  wpl-examples.md  wpl-grammar-reference.md  wpl-quick-patterns.md
tools/skills/wpl-rule-check/scripts/: import-wp-rule-example.sh  run-wpl-check.sh
