[package]
name = "wpl-check"
version = "0.1.7" # @gxl:set(version)
edition = "2024"
description = "CLI and agent skill for validating WPL rules and sample payloads."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/wp-labs/wpl-check"
homepage = "https://github.com/wp-labs/wpl-check"
documentation = "https://github.com/wp-labs/wpl-check"
keywords = ["wpl", "cli", "validation", "parser", "warp"]
categories = ["command-line-utilities", "parsing"]

[dependencies]
wp-lang = { version = "0.1", features = ["check"] }
